y.output

state 0
	$accept: .list $end 
	list: .    (1)

	.  reduce 1 (src line 44)

	list  goto 1

state 1
	$accept:  list.$end 
	list:  list.stat '\n' 

	$end  accept
	DIGIT  shift 8
	LETTER  shift 4
	'-'  shift 6
	'('  shift 5
	.  error

	expr  goto 3
	number  goto 7
	stat  goto 2

state 2
	list:  list stat.'\n' 

	'\n'  shift 9
	.  error


state 3
	stat:  expr.    (3)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	'|'  shift 16
	'&'  shift 15
	'+'  shift 10
	'-'  shift 11
	'*'  shift 12
	'/'  shift 13
	'%'  shift 14
	.  reduce 3 (src line 48)


state 4
	stat:  LETTER.'=' expr 
	expr:  LETTER.    (14)

	'='  shift 17
	.  reduce 14 (src line 76)


state 5
	expr:  '('.expr ')' 

	DIGIT  shift 8
	LETTER  shift 19
	'-'  shift 6
	'('  shift 5
	.  error

	expr  goto 18
	number  goto 7

state 6
	expr:  '-'.expr 

	DIGIT  shift 8
	LETTER  shift 19
	'-'  shift 6
	'('  shift 5
	.  error

	expr  goto 20
	number  goto 7

state 7
	expr:  number.    (15)
	number:  number.DIGIT 

	DIGIT  shift 21
	.  reduce 15 (src line 78)


state 8
	number:  DIGIT.    (16)

	.  reduce 16 (src line 81)


state 9
	list:  list stat '\n'.    (2)

	.  reduce 2 (src line 45)


state 10
	expr:  expr '+'.expr 

	DIGIT  shift 8
	LETTER  shift 19
	'-'  shift 6
	'('  shift 5
	.  error

	expr  goto 22
	number  goto 7

state 11
	expr:  expr '-'.expr 

	DIGIT  shift 8
	LETTER  shift 19
	'-'  shift 6
	'('  shift 5
	.  error

	expr  goto 23
	number  goto 7

state 12
	expr:  expr '*'.expr 

	DIGIT  shift 8
	LETTER  shift 19
	'-'  shift 6
	'('  shift 5
	.  error

	expr  goto 24
	number  goto 7

state 13
	expr:  expr '/'.expr 

	DIGIT  shift 8
	LETTER  shift 19
	'-'  shift 6
	'('  shift 5
	.  error

	expr  goto 25
	number  goto 7

state 14
	expr:  expr '%'.expr 

	DIGIT  shift 8
	LETTER  shift 19
	'-'  shift 6
	'('  shift 5
	.  error

	expr  goto 26
	number  goto 7

state 15
	expr:  expr '&'.expr 

	DIGIT  shift 8
	LETTER  shift 19
	'-'  shift 6
	'('  shift 5
	.  error

	expr  goto 27
	number  goto 7

state 16
	expr:  expr '|'.expr 

	DIGIT  shift 8
	LETTER  shift 19
	'-'  shift 6
	'('  shift 5
	.  error

	expr  goto 28
	number  goto 7

state 17
	stat:  LETTER '='.expr 

	DIGIT  shift 8
	LETTER  shift 19
	'-'  shift 6
	'('  shift 5
	.  error

	expr  goto 29
	number  goto 7

state 18
	expr:  '(' expr.')' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	'|'  shift 16
	'&'  shift 15
	'+'  shift 10
	'-'  shift 11
	'*'  shift 12
	'/'  shift 13
	'%'  shift 14
	')'  shift 30
	.  error


state 19
	expr:  LETTER.    (14)

	.  reduce 14 (src line 76)


state 20
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  '-' expr.    (13)

	.  reduce 13 (src line 74)


state 21
	number:  number DIGIT.    (17)

	.  reduce 17 (src line 90)


state 22
	expr:  expr.'+' expr 
	expr:  expr '+' expr.    (6)
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	'*'  shift 12
	'/'  shift 13
	'%'  shift 14
	.  reduce 6 (src line 60)


state 23
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr '-' expr.    (7)
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	'*'  shift 12
	'/'  shift 13
	'%'  shift 14
	.  reduce 7 (src line 62)


state 24
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr '*' expr.    (8)
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	.  reduce 8 (src line 64)


state 25
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr '/' expr.    (9)
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	.  reduce 9 (src line 66)


state 26
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr '%' expr.    (10)
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	.  reduce 10 (src line 68)


state 27
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr '&' expr.    (11)
	expr:  expr.'|' expr 

	'+'  shift 10
	'-'  shift 11
	'*'  shift 12
	'/'  shift 13
	'%'  shift 14
	.  reduce 11 (src line 70)


state 28
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr '|' expr.    (12)

	'&'  shift 15
	'+'  shift 10
	'-'  shift 11
	'*'  shift 12
	'/'  shift 13
	'%'  shift 14
	.  reduce 12 (src line 72)


state 29
	stat:  LETTER '=' expr.    (4)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	'|'  shift 16
	'&'  shift 15
	'+'  shift 10
	'-'  shift 11
	'*'  shift 12
	'/'  shift 13
	'%'  shift 14
	.  reduce 4 (src line 52)


state 30
	expr:  '(' expr ')'.    (5)

	.  reduce 5 (src line 58)


17 terminals, 5 nonterminals
18 grammar rules, 31/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
54 working sets used
memory: parser 24/240000
17 extra closures
86 shift entries, 1 exceptions
14 goto entries
10 entries saved by goto default
Optimizer space used: output 54/240000
54 table entries, 0 zero
maximum spread: 17, maximum offset: 17
